# FinanceTracker

./: README.md  docker-compose.yml  init.sql  pyproject.toml
app/: auth.py  database.py  main.py  models.py
app/routes/: home.py  operations.py  users.py
app/static/css/: styles.css
app/templates/: base.html  index.html  operations.html  users.html  users_list.htnl
app/templates/partials/: operation_form.html  operations_list.html  user_form.html  users_list.html
app/utils/: jwt.py
