[project]
name = "familyfinans"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.15.1",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.11",
    "htmx>=0.0.0",
    "jinja2>=3.1.6",
    "pyjwt>=2.10.1",
    "pytest>=8.3.5",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.39",
    "uvicorn>=0.34.0",
]
